--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div class="horn-right"></div>
         <div class="horn-left"></div>
         <div class="eye"></div>
+        <div class="right-eye"></div>
         <div class="mouth"></div>
         <div class="ear"></div>
     </div>
