--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="face">
+        <div class="brows"></div>
         <div class="hair-up"></div> 
         <div class="hair-down"></div>
         <div class="horn-right"></div>
