created side cheeck and LEFT ear using PSUDEO elemtns of the head element

--- a/index.html
+++ b/index.html
@@ -36,11 +36,12 @@
 </div>
 
 <!----Project description -->
-<p class="description">
+<!-- <p class="description">
     This illustration was created using CSS positioning, border-radius for organic
     shapes, and pseudo-elements for details like highlights. Absolute positioning
     and z-index were used to layer facial features correctly. One challenge was
     balancing proportions so the face scaled well on different screen sizes.
-  </p>
+</p> -->
+
 </body>
 </html>
