created two horn and psude lelmt for left na dright horns

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <!---HAIR-->
         <div class="hair"></div>
 
-        <!---EARS-->
-        <div class="ear-left"></div>
-        <div class="ear-right"></div>
+        <!---HORNS-->
+        <div class="horn-left"></div>
+        <div class="horn-right"></div>
 
         <!---EYES-->
         <div class="eye-left"></div>
